--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -146,7 +146,7 @@ JobsUI.combo.select.publisher=Select Publisher\:
 JobsUI.combo.select.subscriber=Select Subscriber\:
 JobsUI.help=Jobs Help
 JobsUI.job.has.no.tasks=Job has no tasks\: 
-JobsUI.labelHelp.toolTipText=Jobs help
+JobsUI.labelHelp.toolTipText=Tool help
 JobsUI.labelOrigins.text=Task Origins
 JobsUI.labelTasks.text=Tasks
 JobsUI.publisher.specific=Specific publisher
@@ -159,7 +159,7 @@ JobsUI.select.publisher.tooltip=Select publisher
 JobsUI.select.publisher=-select publisher-
 JobsUI.select.subscriber.tooltip=Select subscriber
 JobsUI.select.subscriber=-select subscriber-
-JobsUI.select.tool=Select job or tool\:
+JobsUI.select.tool=Select tool\:
 JobsUI.stop.currently.running.job=Stop currently running Job?
 JobsUI.subscriber.local=Local subscriber
 JobsUI.subscriber.remote=Remote subscriber
@@ -271,7 +271,30 @@ Navigator.button.Hints.disabled.tooltip=Hints disabled
 Navigator.button.Hints.enabled.tooltip=Hints enabled
 Navigator.button.HintsKeys.text=\ Hints
 Navigator.button.Up.toolTipText=Up to parent (Alt-Up)
+Navigator.buttonAddOrigin.mnemonic=D
+Navigator.buttonAddOrigin.text=Add
+Navigator.buttonAddOrigin.toolTipText=Add selected Browser origin(s)
+Navigator.buttonOriginDown.toolTipText=Move origin down
+Navigator.buttonRemoveOrigin.mnemonic=M
+Navigator.buttonRemoveOrigin.text=Remove
+Navigator.buttonRemoveOrigin.toolTipText=Delete one or more origins
+Navigator.buttonOriginUp.toolTipText=Move origin Up
+Navigator.buttonNewLocation.text=New
+Navigator.buttonCopy.mnemonic=C
+Navigator.buttonCopy.text=Copy
+Navigator.buttonCopy.toolTipText=Copy an existing tool configuration
+Navigator.buttonDelete.mnemonic=D
+Navigator.buttonDelete.text=Delete
+Navigator.buttonDelete.toolTipText=Delete a tool configuration
 Navigator.buttonHintTracking.mnemonic=N
+Navigator.buttonNew.mnemonic=N
+Navigator.buttonNew.text=New ...
+Navigator.buttonNew.toolTipText=Add new tool configuration
+Navigator.buttonNewLibrary.mnemonic_2=N
+Navigator.buttonNewLibrary.text=New
+Navigator.buttonNewLibrary.toolTipText=Create new library
+Navigator.cancelButton.text=Cancel
+Navigator.cancelButton.toolTipText=Discard all changes
 Navigator.controls.help.title=Navigator Controls
 Navigator.delete.bookmarks=Delete Bookmarks
 Navigator.detected.local.system.as=Detected local system as 
@@ -281,6 +304,9 @@ Navigator.dryrun=Dry-run
 Navigator.error.launching.browser=Error launching browser
 Navigator.error.writing.hint=Error writing Hint: 
 Navigator.initialized=Initialized Navigator
+Navigator.labelSources.text=Sources
+Navigator.labelHelp.toolTipText=Tool help
+Navigator.labelLibariesGettingStarted.text=Click the New button to define parameters for a library
 Navigator.libraries=\ libraries
 Navigator.menu.About.mnemonic=A
 Navigator.menu.About.text=About ...
@@ -457,6 +483,8 @@ Navigator.panel.SystemOne.tab.mnemonic=2
 Navigator.panel.SystemOne.tab.title=System 2
 Navigator.panel.SystemTwo.tab.mnemonic=4
 Navigator.panel.SystemTwo.tab.title=System 4
+Navigator.locationsTab.tab.title=Locations
+Navigator.bibliographyTab.tab.title=Bibliography
 Navigator.popupCheckBoxMenuItemWordWrap.mnemonic=W
 Navigator.popupCheckBoxMenuItemWordWrap.text=Word Wrap Log
 Navigator.popupMenu.Bottom.mnemonic=B
@@ -485,6 +513,8 @@ Navigator.popupMenuItemRefresh.mnemonic=F
 Navigator.popupMenuItemRefresh.text=Refresh
 Navigator.popupMenuItemTop.mnemonic=T
 Navigator.popupMenuItemTop.text=Top
+Navigator.saveButton.text=Save
+Navigator.saveButton.toolTipText=Save all changes
 Navigator.scanning.publisher=Scanning publisher
 Navigator.scanning.subscriber=Scanning subscriber
 Navigator.scrollPane.Log.tab.title=Log
@@ -496,6 +526,7 @@ Navigator.splitPane.Browser.tab.mnemonic=R
 Navigator.splitPane.Browser.tab.title=Browser
 Navigator.splitPane.Libraries.tab.mnemonic=I
 Navigator.splitPane.Libraries.tab.title=Libraries
+Navigator.librariesTab.tab.title=Libraries
 Navigator.textField.Location.toolTipText=Location
 Navigator.workstation=Workstation
 OperationsUI.are.you.sure.you.want.delete.entries=Are you sure you want delete {0} entries?
