--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -43,7 +43,6 @@ DuplicateFinder.duplicates.items.directories={0} duplicates, scanned {1} items i
 DuplicateFinder.go.to.this.item.in.the.browser=Go to this item in the Browser
 DuplicateFinder.goto=Go
 DuplicateFinder.help=Duplicate Finder Help
-DuplicateFinder.labelHelp.toolTipText=Tool help
 DuplicateFinder.please.select.a.collection.for.run=Please select a Collection for Run
 DuplicateFinder.run.tool.on.collection=Run tool on the {0} Collection?
 DuplicateFinder.running=Running Duplicate Finder
@@ -68,7 +67,6 @@ EmptyDirectoryFinder.directories=Empty Directories
 EmptyDirectoryFinder.empty.directories=\ empty directories
 EmptyDirectoryFinder.empty.items.directories={0} empty directories, scanned {1} items in {2} directories
 EmptyDirectoryFinder.help=Empty Directory Finder Help
-EmptyDirectoryFinder.labelHelp.toolTipText=Tool help
 EmptyDirectoryFinder.please.select.a.collection.for.run=Please select a Collection for Run
 EmptyDirectoryFinder.removing=Removing 
 EmptyDirectoryFinder.run.tool.on.collection=Run tool on the {0} Collection?
@@ -116,11 +114,7 @@ JobsUI.buttonAddTask.mnemonic=A
 JobsUI.buttonAddTask.text=Add
 JobsUI.buttonAddTask.toolTipText=Add a task
 JobsUI.buttonCopy.mnemonic=C
-JobsUI.buttonCopy.text=Copy
-JobsUI.buttonCopy.toolTipText=Copy an existing job configuration
 JobsUI.buttonDelete.mnemonic=D
-JobsUI.buttonDelete.text=Delete
-JobsUI.buttonDelete.toolTipText=Delete a job configuration
 JobsUI.buttonGenerate.mnemonic_2=G
 JobsUI.buttonGenerate.text=Generate ...
 JobsUI.buttonGenerate.toolTipText=Generate a command line from the selected configuration
@@ -146,7 +140,6 @@ JobsUI.combo.select.publisher=Select Publisher\:
 JobsUI.combo.select.subscriber=Select Subscriber\:
 JobsUI.help=Jobs Help
 JobsUI.job.has.no.tasks=Job has no tasks\: 
-JobsUI.labelHelp.toolTipText=Tool help
 JobsUI.labelOrigins.text=Task Origins
 JobsUI.labelTasks.text=Tasks
 JobsUI.publisher.specific=Specific publisher
@@ -171,11 +164,7 @@ JunkRemover.button.AddRow.mnemonic=A
 JunkRemover.button.AddRow.text=Add
 JunkRemover.button.AddRow.toolTipText=Add an empty pattern
 JunkRemover.button.Copy.mnemonic=C
-JunkRemover.button.Copy.text=Copy
-JunkRemover.button.Copy.toolTipText=Copy an existing tool configuration
 JunkRemover.button.Delete.mnemonic=D
-JunkRemover.button.Delete.text=Delete
-JunkRemover.button.Delete.toolTipText=Delete a tool configuration
 JunkRemover.button.New.mnemonic=N
 JunkRemover.button.New.text=New
 JunkRemover.button.New.toolTipText=Add new tool configuration
@@ -191,7 +180,6 @@ JunkRemover.displayName=Junk Remover
 JunkRemover.error.writing=Error writing: 
 JunkRemover.help=Junk Remover Help
 JunkRemover.junk.pattern=Junk Pattern
-JunkRemover.labelHelp.toolTipText=Tool help
 JunkRemover.nothing.selected.in.browser=Nothing selected in Browser
 JunkRemover.run.on.N.locations=Run "{0}" on {1} {2} Browser selection(s)?
 JunkRemover.stop.running.junk.remover=Stop currently running Junk Remover?
@@ -259,6 +247,7 @@ NavTreeNode.sources=\ sources
 NavTreeNode.swing.worker.fault.during.get.of=Swing worker fault during get of 
 NavTreeNode.system=System
 NavTreeNode.unknown=Unknown
+Navigator.bibliographyTab.tab.title=Bibliography
 Navigator.button.Back.toolTipText=Back (Alt-Left)
 Navigator.button.Forward.toolTipText=Forward (Alt-Right)
 Navigator.button.HintServer.disabled.tooltip=Hints disabled
@@ -271,30 +260,36 @@ Navigator.button.Hints.disabled.tooltip=Hints disabled
 Navigator.button.Hints.enabled.tooltip=Hints enabled
 Navigator.button.HintsKeys.text=\ Hints
 Navigator.button.Up.toolTipText=Up to parent (Alt-Up)
-Navigator.buttonAddOrigin.mnemonic=D
-Navigator.buttonAddOrigin.text=Add
-Navigator.buttonAddOrigin.toolTipText=Add selected Browser origin(s)
-Navigator.buttonOriginDown.toolTipText=Move origin down
-Navigator.buttonRemoveOrigin.mnemonic=M
-Navigator.buttonRemoveOrigin.text=Remove
-Navigator.buttonRemoveOrigin.toolTipText=Delete one or more origins
-Navigator.buttonOriginUp.toolTipText=Move origin Up
-Navigator.buttonNewLocation.text=New
+Navigator.buttonAddLibrary.mnemonic=D
+Navigator.buttonAddLibrary.text=Add
+Navigator.buttonAddLibrary.toolTipText=Add selected Browser origin(s)
+Navigator.buttonAddSource.mnemonic=D
+Navigator.buttonAddSource.text=Add
+Navigator.buttonAddSource.toolTipText=Add selected Browser origin(s)
+Navigator.buttonAddSource2.mnemonic=D
+Navigator.buttonAddSource2.text=Add
+Navigator.buttonAddSource2.toolTipText=Add selected Browser origin(s)
 Navigator.buttonCopy.mnemonic=C
 Navigator.buttonCopy.text=Copy
 Navigator.buttonCopy.toolTipText=Copy an existing tool configuration
 Navigator.buttonDelete.mnemonic=D
-Navigator.buttonDelete.text=Delete
-Navigator.buttonDelete.toolTipText=Delete a tool configuration
+Navigator.buttonDelete.text=Delete ...
+Navigator.buttonDelete.toolTipText=Delete tool configuration
+Navigator.buttonDownSource.toolTipText=Move origin down
 Navigator.buttonHintTracking.mnemonic=N
 Navigator.buttonNew.mnemonic=N
 Navigator.buttonNew.text=New ...
 Navigator.buttonNew.toolTipText=Add new tool configuration
-Navigator.buttonNewLibrary.mnemonic_2=N
-Navigator.buttonNewLibrary.text=New
-Navigator.buttonNewLibrary.toolTipText=Create new library
-Navigator.cancelButton.text=Cancel
-Navigator.cancelButton.toolTipText=Discard all changes
+Navigator.buttonRemoveLibrary.mnemonic=M
+Navigator.buttonRemoveLibrary.text=Remove
+Navigator.buttonRemoveLibrary.toolTipText=Delete one or more origins
+Navigator.buttonRemoveSource.mnemonic=M
+Navigator.buttonRemoveSource.text=Remove
+Navigator.buttonRemoveSource.toolTipText=Delete one or more origins
+Navigator.buttonRemoveSource2.mnemonic=M
+Navigator.buttonRemoveSource2.text=Remove
+Navigator.buttonRemoveSource2.toolTipText=Delete one or more origins
+Navigator.buttonUpSource.toolTipText=Move origin Up
 Navigator.controls.help.title=Navigator Controls
 Navigator.delete.bookmarks=Delete Bookmarks
 Navigator.detected.local.system.as=Detected local system as 
@@ -303,11 +298,13 @@ Navigator.dryrun.tooltip=Run but do not perform any actions
 Navigator.dryrun=Dry-run
 Navigator.error.launching.browser=Error launching browser
 Navigator.error.writing.hint=Error writing Hint: 
+Navigator.generalTab.tab.title=General
 Navigator.initialized=Initialized Navigator
+Navigator.labelLibrariesGettingStarted.text=Click the New button to define parameters for a library
+Navigator.labelLibrariesHelp.toolTipText=Libraries help
 Navigator.labelSources.text=Sources
-Navigator.labelHelp.toolTipText=Tool help
-Navigator.labelLibariesGettingStarted.text=Click the New button to define parameters for a library
 Navigator.libraries=\ libraries
+Navigator.locationsTab.tab.title=Locations
 Navigator.menu.About.mnemonic=A
 Navigator.menu.About.text=About ...
 Navigator.menu.AddBookmark.mnemonic=A
@@ -483,8 +480,6 @@ Navigator.panel.SystemOne.tab.mnemonic=2
 Navigator.panel.SystemOne.tab.title=System 2
 Navigator.panel.SystemTwo.tab.mnemonic=4
 Navigator.panel.SystemTwo.tab.title=System 4
-Navigator.locationsTab.tab.title=Locations
-Navigator.bibliographyTab.tab.title=Bibliography
 Navigator.popupCheckBoxMenuItemWordWrap.mnemonic=W
 Navigator.popupCheckBoxMenuItemWordWrap.text=Word Wrap Log
 Navigator.popupMenu.Bottom.mnemonic=B
@@ -513,8 +508,6 @@ Navigator.popupMenuItemRefresh.mnemonic=F
 Navigator.popupMenuItemRefresh.text=Refresh
 Navigator.popupMenuItemTop.mnemonic=T
 Navigator.popupMenuItemTop.text=Top
-Navigator.saveButton.text=Save
-Navigator.saveButton.toolTipText=Save all changes
 Navigator.scanning.publisher=Scanning publisher
 Navigator.scanning.subscriber=Scanning subscriber
 Navigator.scrollPane.Log.tab.title=Log
@@ -526,16 +519,11 @@ Navigator.splitPane.Browser.tab.mnemonic=R
 Navigator.splitPane.Browser.tab.title=Browser
 Navigator.splitPane.Libraries.tab.mnemonic=I
 Navigator.splitPane.Libraries.tab.title=Libraries
-Navigator.librariesTab.tab.title=Libraries
 Navigator.textField.Location.toolTipText=Location
 Navigator.workstation=Workstation
 OperationsUI.are.you.sure.you.want.delete.entries=Are you sure you want delete {0} entries?
 OperationsUI.buttonCopyOperation.mnemonic=C
-OperationsUI.buttonCopyOperation.text=Copy
-OperationsUI.buttonCopyOperation.toolTipText=Copy an existing tool configuration
 OperationsUI.buttonDeleteOperation.mnemonic=D
-OperationsUI.buttonDeleteOperation.text=Delete
-OperationsUI.buttonDeleteOperation.toolTipText=Delete a tool configuration
 OperationsUI.buttonGenerateOperation.mnemonic=G
 OperationsUI.buttonGenerateOperation.text=Generate ...
 OperationsUI.buttonGenerateOperation.toolTipText=Generate a command line from the selected configuration
@@ -576,7 +564,7 @@ OperationsUI.buttonOperationWhatsNewFilePick.toolTipText=What's New Output File
 OperationsUI.buttonRunOperation.mnemonic=U
 OperationsUI.buttonRunOperation.text=Run ...
 OperationsUI.buttonRunOperation.toolTipText=Execute the selected configuration on the current Browser selection(s)
-OperationsUI.checkBoxOperationCrossCheck.toolTipText=Cross-check for duplicate items between libaries
+OperationsUI.checkBoxOperationCrossCheck.toolTipText=Cross-check for duplicate items between libraries
 OperationsUI.checkBoxOperationDecimalScale.toolTipText=Uncheck for binary (1024 K) scale
 OperationsUI.checkBoxOperationDecimalScale2.toolTipText=Uncheck for binary (1024 K) scale
 OperationsUI.checkBoxOperationDryRun.toolTipText=Perform back-up operation but do not change anything
@@ -605,18 +593,17 @@ OperationsUI.comboBoxOperationWhatsNew.0.whatsNew=What's New\:
 OperationsUI.comboBoxOperationWhatsNew.1.whatsNewAll=What's New, all\:
 OperationsUI.comboBoxOperationWhatsNew.prototypeDisplayValue=What's New, all
 OperationsUI.config.cancelled=Operation {0} cancelled
-Operations.displayName=Operations
 OperationsUI.displayName=Operations
-OperationsUI.els.authkeys.file=ELS Authorization file (*.keys)
+OperationsUI.els.auth.keys.file=ELS Authorization file (*.keys)
 OperationsUI.els.blacklist.file=ELS Blacklist file (*.txt)
 OperationsUI.els.export.items.file=ELS Export Items file (*.json)
 OperationsUI.els.export.text.file=ELS Export Text file (*.txt)
 OperationsUI.els.hint.keys.file=ELS Hint Keys file (*.keys)
 OperationsUI.els.hints.server.file=ELS Hints/Server file (*.json)
-OperationsUI.els.ipwhitelist.file=ELS Whitelist file (*.txt)
 OperationsUI.els.mismatches.file=ELS Mismatches file (*.txt)
 OperationsUI.els.targets.file.json=ELS Targets file (*.json)
 OperationsUI.els.what.s.new.file=ELS What's New file (*.txt)
+OperationsUI.els.whitelist.file=ELS Whitelist file (*.txt)
 OperationsUI.exclude=Exclude: 
 OperationsUI.help=Operations Help
 OperationsUI.include.selections=Include selections
@@ -636,7 +623,6 @@ OperationsUI.labelOperationExclude.text=Exclude\:
 OperationsUI.labelOperationExportItems.text=Export items\:
 OperationsUI.labelOperationExportText.text=Export text\:
 OperationsUI.labelOperationGettingStarted.text=Click the New button to define parameters for an ELS operation
-OperationsUI.labelOperationHelp.toolTipText=Tool help
 OperationsUI.labelOperationHintKeyServer.text=Hint server\:
 OperationsUI.labelOperationHintKeyServer6.text=Hint server\:
 OperationsUI.labelOperationHintKeys.text=Hint keys\:
@@ -649,7 +635,7 @@ OperationsUI.labelOperationKeepGoing.text=Keep going\:
 OperationsUI.labelOperationKeepGoing2.text=Keep going\:
 OperationsUI.labelOperationKeepGoing3.text=Keep going\:
 OperationsUI.labelOperationNavigatorCheckbox.text=Navigator\:
-OperationsUI.labelOperationNoBackfill.text=No back-fill\:
+OperationsUI.labelOperationNoBackFill.text=No back-fill\:
 OperationsUI.labelOperationOverwrite.text=Overwrite\:
 OperationsUI.labelOperationOverwrite2.text=Overwrite\:
 OperationsUI.labelOperationPreservedDates.text=Preserve dates\:
@@ -669,7 +655,8 @@ OperationsUI.mode.localPublish=Local publish
 OperationsUI.mode.publisherListener=Publisher listener, -r L for -r T
 OperationsUI.mode.publisherTerminal=Publisher terminal, -r M for -r S
 OperationsUI.mode.remotePublish=Remote publish, -r P for -r S
-OperationsUI.mode.select.type=Select new ELS tool operation:
+OperationsUI.mode.select.type=Select ELS operation to configure:
+OperationsUI.mode.select.use.local.remote.publish.for.navigator=Note: Use Local/Remote publish for Navigator 
 OperationsUI.mode.subscriberForceQuit=Subscriber force quit, -G
 OperationsUI.mode.subscriberListener=Subscriber listener, -r S for -r P|M
 OperationsUI.mode.subscriberTerminal=Subscriber terminal, -r T for -r L
@@ -702,11 +689,7 @@ RenameUI.type.combobox.3.remove=Remove
 RenameUI.type.combobox.4.replace=Replace
 RenameUI.type.combobox.select.type=Select type:
 Renamer.button.Copy.mnemonic=C
-Renamer.button.Copy.text=Copy
-Renamer.button.Copy.toolTipText=Copy an existing tool configuration
 Renamer.button.Delete.mnemonic=D
-Renamer.button.Delete.text=Delete
-Renamer.button.Delete.toolTipText=Delete a tool configuration
 Renamer.button.New.mnemonic=N
 Renamer.button.New.text=New ...
 Renamer.button.New.toolTipText=Add new tool configuration
@@ -737,7 +720,6 @@ Renamer.help=Renamer Help
 Renamer.labelFind.text=Find\: 
 Renamer.labelFrom.text=From\: 
 Renamer.labelGettingStarted.text=Click the New button to define parameters for a rename task
-Renamer.labelHelp.toolTipText=Tool help
 Renamer.labelInsertPosition.text=Position\: 
 Renamer.labelLength.text=Length\: 
 Renamer.labelNumberingPosition.text_2=Position\: 
@@ -807,7 +789,6 @@ Settings.this.title=Navigator Settings
 Sleep.displayName=Sleep
 Sleep.help=Sleep Help
 Sleep.labelTime.text=Sleep time in minutes\:  
-Sleep.okButton.text=Save
 Sleep.sleep.cancelled=Sleep cancelled
 Sleep.stop.running.sleep=Stop running Sleep?
 Sleep.title=Sleep Tool\t
@@ -903,3 +884,9 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
+Libraries.libraries.changes.cancelled=Libraries changes cancelled
+Libraries.libraries.changes.saved=Libraries changes saved
+Libraries.library=Library
+Libraries.hint.server=Hint Server
+Libraries.targets=Targets
+Libraries.mode.select.type=Select type:
